--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.1",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.344.0",
     "next": "16.0.3",
+    "next-themes": "^0.4.6",
     "papaparse": "^5.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
