--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.1",
+    "@radix-ui/react-toast": "^1.2.15",
     "@tanstack/react-query": "^5.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.45.1",
     "lucide-react": "^0.344.0",
     "next": "16.0.3",
+    "next-themes": "^0.4.6",
     "papaparse": "^5.4.1",
+    "postgres": "^3.4.8",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "recharts": "^2.10.3",
@@ -29,6 +33,7 @@
     "@types/react": "^19.2.4",
     "@types/react-dom": "^19.2.3",
     "autoprefixer": "^10.4.17",
+    "drizzle-kit": "^0.31.8",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
